fixes and stuff regarding the Viewable Interface